# kabeiroi

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  build-all.sh
engine/: CMakeLists.txt  build.sh
engine/src/: defines.h  entry.h  game_types.h
engine/src/containers/: darray.c  darray.h
engine/src/core/: application.c  application.h  asserts.h  event.c  event.h  kmemeory.c  kmemeory.h  kmemory.c  logger.c  logger.h
engine/src/platform/: platform.h  platform_linux.c  platform_win32.c
html/: annotated.html  application_8c.html  application_8c__incl.map  application_8c__incl.md5  application_8h.html  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  asserts_8h.html  asserts_8h__dep__incl.map  asserts_8h__dep__incl.md5  asserts_8h__incl.map  asserts_8h__incl.md5  asserts_8h_source.html  classes.html  defines_8h.html  defines_8h__dep__incl.map  defines_8h__dep__incl.md5  defines_8h_source.html  dir_000000_000002.html  dir_000003_000000.html  dir_000004_000001.html  dir_3d9126aa00c041bc0b8f859d1965a0f4.html  dir_3d9126aa00c041bc0b8f859d1965a0f4_dep.map  dir_4520f1bc4011f83d4d852328e8399600.html  dir_4520f1bc4011f83d4d852328e8399600_dep.map  dir_5023b6ae898e8cb97148492cc641a5cd.html  dir_5023b6ae898e8cb97148492cc641a5cd_dep.map  dir_5023b6ae898e8cb97148492cc641a5cd_dep.md5  dir_5e835386694ce392648cfcf102577fe3.html  dir_5e835386694ce392648cfcf102577fe3_dep.map  dir_5e835386694ce392648cfcf102577fe3_dep.md5  dir_996f45160da62e1a3d7f6046fad68f51.html  dir_996f45160da62e1a3d7f6046fad68f51_dep.map  dir_ab0de62f4d6b6f8e1e02b7804f29fc5f.html  dir_ab0de62f4d6b6f8e1e02b7804f29fc5f_dep.map  dir_ab0de62f4d6b6f8e1e02b7804f29fc5f_dep.md5  entry_8c.html  (+89 more)
html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  (+57 more)
latex/: annotated.tex  application_8c.tex  application_8c__incl.md5  application_8h.tex  application_8h__dep__incl.md5  application_8h__incl.md5  application_8h_source.tex  asserts_8h.tex  asserts_8h__dep__incl.md5  asserts_8h__incl.md5  asserts_8h_source.tex  defines_8h.tex  defines_8h__dep__incl.md5  defines_8h_source.tex  dir_3d9126aa00c041bc0b8f859d1965a0f4.tex  dir_3d9126aa00c041bc0b8f859d1965a0f4_dep.md5  dir_4520f1bc4011f83d4d852328e8399600.tex  dir_4520f1bc4011f83d4d852328e8399600_dep.md5  dir_5023b6ae898e8cb97148492cc641a5cd.tex  dir_5e835386694ce392648cfcf102577fe3.tex  dir_996f45160da62e1a3d7f6046fad68f51.tex  dir_996f45160da62e1a3d7f6046fad68f51_dep.md5  dir_ab0de62f4d6b6f8e1e02b7804f29fc5f.tex  entry_8c.tex  entry_8c__incl.md5  entry_8h.tex  entry_8h__dep__incl.md5  entry_8h__incl.md5  entry_8h_source.tex  event_8h.tex  event_8h__incl.md5  event_8h_source.tex  files.tex  game_8c.tex  game_8c__incl.md5  game_8h.tex  game_8h__dep__incl.md5  game_8h__incl.md5  game_8h_source.tex  game__types_8h.tex  (+34 more)
testbed/: CMakeLists.txt  build.sh
testbed/src/: entry.c  game.c  game.h  main  main.c
